<resources>
    <string name="app_name">SummerMemes</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="auth_button">Войти</string>
    <string name="password_helper">Пароль должен содержать %d символов</string>
    <string name="field_empty_error">Поле не может быть пустым</string>
    <string name="auth_error">Во время запроса произошла ошибка, возможно вы неверно ввели логин/пароль.</string>
    <string name="feed_loading_error">Не удалось загрузить ленту \nОбновите экран или попробуйте позже.</string>
    <string name="popular_memes">Популярные мемы</string>
    <string name="refresh_memes_error">Отсутствует интернет-соединение \nПопробуйте позже</string>
    <string name="title_activity_new_meme">NewMemeActivity</string>
    <string name="create_button">Создать</string>
    <string name="title_hint">Заголовок</string>
    <string name="text_hint">Текст</string>
    <string name="meme_save_error">Не удалось сохранить мем</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="from_gallery">Из галереи</string>
    <string name="make_photo">Сделать фото</string>
    <string name="about_app">О приложении</string>
    <string name="logout">Выйти</string>
    <string name="logout_message">Действительно хотите выйти?</string>
    <string name="cancel">Отмена</string>
    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не найдено</string>

    <plurals name="days">
        <item quantity="one">%1$d день назад</item>
        <item quantity="few">%1$d дня назад</item>
        <item quantity="many">%1$d дней назад</item>
        <item quantity="other">%1$d дней назад</item>
    </plurals>
</resources>
