<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.auth.AuthActivity">

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/login_text_field_boxes"
        style="@style/text_field_boxes"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        app:labelText="@string/login">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/login_edit_text"
            app:prefixTextColor="@color/white"
            android:maxLength="14"
            style="@style/extended_edit_text"
            android:inputType="phone" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/password_text_field_boxes"
        style="@style/text_field_boxes"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:endIcon="@drawable/ic_eye_on"
        app:labelText="@string/password">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/password_edit_text"
            style="@style/extended_edit_text"
            android:inputType="textPassword" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/auth_button"
            style="@style/button"
            android:background="@drawable/auth_button_background"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/auth_button" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="20dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/black" />
    </FrameLayout>

</LinearLayout>